<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black"
            android:title="@string/menu_groups" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_group_black"
            android:title="@string/menu_contacts" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_black"
            android:title="@string/menu_conversations" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_black"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black"
            android:title="@string/menu_info" />
    </group>
</menu>