<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_header"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/colorPrimaryDark"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/navigation_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/navigation_avatar" />

    <TextView
        android:id="@+id/navigation_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/app_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/navigation_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_email" />

</LinearLayout>