<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <EditText
        android:id="@+id/actLoginEditTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="13"
        android:hint="@string/app_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/actLoginEditTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="13"
        android:hint="@string/app_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/actLoginEditTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/actLoginEditTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/actLoginEditTextEmail" />

    <Button
        android:id="@+id/actLoginBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_login"
        app:layout_constraintEnd_toEndOf="@+id/actLoginEditTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/actLoginEditTextPassword" />

    <Button
        android:id="@+id/actLoginBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_register"
        app:layout_constraintStart_toStartOf="@+id/actLoginEditTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/actLoginEditTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>