<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row_module_checklist_cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row_module_checklist_cl_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/row_module_checklist_tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_checklist_item_amount"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingEnd="4dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/row_module_checklist_tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/row_module_checklist_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_checklist_item_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/row_module_checklist_tv_amount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/row_module_checklist_tv_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_timestamp_full"
            android:visibility="visible"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row_module_checklist_tv_name" />

        <TextView
            android:id="@+id/row_module_checklist_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sample_username"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row_module_checklist_tv_timestamp" />

        <CheckBox
            android:id="@+id/row_module_checklist_cb_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>