<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ProfileActivity"
    android:background="@color/colorBackgroundPrimary">

    <include
        android:id="@+id/act_profile_toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_profile_toolbar"
        app:srcCompat="@drawable/image_default_group" />

    <TextView
        android:id="@+id/act_profile_et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:text="@string/sample_username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/act_profile_et_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_text"
        android:backgroundTint="@android:color/white"
        android:hint="@string/profile_first_name"
        android:inputType="textPersonName"
        android:minHeight="40dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_profile_et_username" />

    <EditText
        android:id="@+id/act_profile_et_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_text"
        android:backgroundTint="@android:color/white"
        android:hint="@string/profile_last_name"
        android:inputType="textPersonName"
        android:minHeight="40dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toEndOf="@+id/act_profile_et_first_name"
        app:layout_constraintTop_toBottomOf="@+id/act_profile_et_username" />

    <Button
        android:id="@+id/act_profile_btn_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/profile_delete_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/act_profile_btn_logout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/act_profile_btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorPrimaryText"
        android:text="@string/profile_logout"
        android:textColor="@color/colorIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/act_profile_btn_delete_account" />

</androidx.constraintlayout.widget.ConstraintLayout>