<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.GroupSettingsActivity">

    <include
        android:id="@+id/act_group_settings_toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/act_group_settings_cv_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/act_group_settings_rv_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_group_settings_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/act_group_settings_tv_num_member_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/group_members_number"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/act_group_settings_tv_num_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/sample_group_size"
                app:layout_constraintStart_toEndOf="@+id/act_group_settings_tv_num_member_text"
                app:layout_constraintTop_toTopOf="@+id/act_group_settings_tv_num_member_text" />

            <TextView
                android:id="@+id/act_group_settings_tv_num_modules_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/group_modules_number"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/act_group_settings_tv_num_member_text" />

            <TextView
                android:id="@+id/act_group_settings_tv_num_modules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_modules_count"
                app:layout_constraintStart_toStartOf="@+id/act_group_settings_tv_num_member"
                app:layout_constraintTop_toTopOf="@+id/act_group_settings_tv_num_modules_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/act_group_settings_rv_member"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_group_settings_cv_overview" />

</androidx.constraintlayout.widget.ConstraintLayout>