<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/frgmt_settings_cv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frgmt_settings_cl_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/frgmt_settings_iv_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_compass" />

            <TextView
                android:id="@+id/frgmt_settings_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/sample_username"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/frgmt_settings_iv_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/frgmt_settings_tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/sample_email"
                app:layout_constraintStart_toEndOf="@+id/frgmt_settings_iv_avatar"
                app:layout_constraintTop_toBottomOf="@+id/frgmt_settings_tv_username" />

            <TextView
                android:id="@+id/frgmt_settings_tv_about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:singleLine="false"
                android:text="@string/sample_message"
                android:textAllCaps="false"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frgmt_settings_iv_avatar"
                app:layout_constraintTop_toBottomOf="@+id/frgmt_settings_tv_email" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/frgmt_settings_cv_interface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frgmt_settings_cv_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frgmt_settings_cl_interface"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/frgmt_settings_tv_interface_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/settings_interface_header"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/frgmt_settings_tv_interface_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_interface_theme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/frgmt_settings_tv_interface_header"
                app:layout_constraintTop_toBottomOf="@+id/frgmt_settings_tv_interface_header" />

            <Switch
                android:id="@+id/frgmt_settings_switch_interface_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/frgmt_settings_tv_interface_theme"
                app:layout_constraintStart_toEndOf="@+id/frgmt_settings_tv_interface_theme"
                app:layout_constraintTop_toTopOf="@+id/frgmt_settings_tv_interface_theme" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>